# Kage

./: .gitignore  CLAUDE.md  LICENSE  MINI-CLAUDE-CODE-PROMPT.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  cve-scan.yml  release.yml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  INSTALLATION.md  MCP.md  TOOLS.md  USAGE.md
prompts/v1/: system.md
scripts/: install.sh
src/kage/: __main__.py
src/kage/agent/: core.py
src/kage/cli/: app.py
src/kage/config/: settings.py
src/kage/knowledge/: __init__.py  docs_cache.py  embeddings.py  indexer.py  retriever.py
src/kage/llm/: base.py  ollama.py
src/kage/memory/: __init__.py  compactor.py  persistent.py  session.py  working.py
src/kage/tools/: base.py  registry.py
src/kage/tools/builtin/: bash.py  code_exec.py  cve.py  docs.py  files.py  git.py  search.py  test.py
src/kage/utils/: __init__.py  logging.py
